[package]
name = "tptool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.17.0"
pasts = "0.8"
polling = "3.3.0"
# Needed until https://github.com/ardaku/stick/pull/38 is merged to upstream repo.
stick = { git = "https://github.com/GreatAttractor/stick.git", rev = "6269405a7d6d812b7497715b843a822a4d3f6dcd" }
