[package]
name = "tptool"
version = "0.1.0"
edition = "2021"
authors = ["Filip Szczerek <ga.software@yahoo.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
cursive = "0.20.0"
pasts = "0.8"
polling = "3.3.0"
pointing-utils = { path = "ext/pointing-utils" }
# Needed until https://github.com/ardaku/stick/pull/38 is merged to upstream repo.
stick = { git = "https://github.com/GreatAttractor/stick.git", rev = "6269405a7d6d812b7497715b843a822a4d3f6dcd" }
