[package]
name = "tptool"
version = "0.1.0"
edition = "2021"
authors = ["Filip Szczerek <ga.software@yahoo.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
chrono = "0.4.12"
configparser = "3.0.4"
# currently `ncurses` doesn't build on MS Windows (missing `LC_MESSAGES` const in `libc`)
cursive = { version = "0.20.0", default-features = false, features = ["pancurses-backend"] }
dirs = "5.0.1"
futures = "0.3.30"
log = "0.4.20"
os_info = "3.8.2"
pasts = "0.14.3"
polling = "3.3.0"
pointing-utils = { path = "ext/pointing-utils" }
serialport = "4.2.0"
simplelog = "0.12.1"
# Needed until https://github.com/ardaku/stick/pull/38 is merged to upstream repo.
stick = { git = "https://github.com/GreatAttractor/stick.git", rev = "6269405a7d6d812b7497715b843a822a4d3f6dcd" }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = "0.25.0"
time = "0.3.30" # why needed explicitly? simplelog's use not enough?

[target.'cfg(windows)'.dependencies]
pdcurses-sys = "0.7.1" # needed for pdcurses::resize_term
